# Jrinx-rs

./: .editorconfig  .gitignore  .python-version  Cargo.toml  README.md  dump.dtb  dump.dts  file.dtb  file.dts  file.txt  requirements.txt  rust-toolchain.toml  sifive_u.dts  virt.dts
.cargo/: config.toml
.github/workflows/: test.yml
kern/: .vscode-ctags  Cargo.toml  build.rs  dump.dtb  uprog.jrz
kern/modules/addr/: Cargo.toml
kern/modules/addr-macro/: Cargo.toml
kern/modules/addr-macro/src/: lib.rs
kern/modules/addr/src/: lib.rs
kern/modules/config/: Cargo.toml
kern/modules/config/src/: lib.rs
kern/modules/config/src/arch/: mod.rs  riscv.rs
kern/modules/devprober/: Cargo.toml
kern/modules/devprober-macro/: Cargo.toml
kern/modules/devprober-macro/src/: lib.rs
kern/modules/devprober/src/: lib.rs
kern/modules/driver/: Cargo.toml
kern/modules/driver/src/: lib.rs  mem.rs
kern/modules/driver/src/bus/: mod.rs  virtio.rs
kern/modules/driver/src/driver/: irq.rs  mod.rs  uart.rs
kern/modules/driver/src/io/: mmio.rs  mod.rs
kern/modules/driver/src/irq/: irq_dispatch.rs  irq_manager.rs  mod.rs  riscv_intc.rs  riscv_plic.rs
kern/modules/driver/src/net/: mod.rs  net.rs  net_buf.rs  virtio.rs  virtio_net.rs
kern/modules/driver/src/smoltcp_impl/: addr.rs  listen_table.rs  mod.rs  tcp.rs
kern/modules/driver/src/uart/: ns16550.rs  ns16550a.rs
kern/modules/error/: Cargo.toml
kern/modules/error/src/: lib.rs
kern/modules/hal/: Cargo.toml
kern/modules/hal/src/: lib.rs
kern/modules/heap/: Cargo.toml
kern/modules/heap/src/: lib.rs
kern/modules/layout/: Cargo.toml
kern/modules/layout/src/: lib.rs
kern/modules/loader/: Cargo.toml
kern/modules/loader/src/: lib.rs
kern/modules/logging/: Cargo.toml
kern/modules/logging/src/: lib.rs
kern/modules/multitask/: Cargo.toml
kern/modules/multitask/src/: executor.rs  inspector.rs  lib.rs  runtime.rs
kern/modules/multitask/src/arch/: mod.rs
kern/modules/net/: Cargo.toml
kern/modules/net/src/: lib.rs
kern/modules/net/src/smoltcp_impl/: listen_table.rs  mod.rs  tcp.rs
kern/modules/paging/: Cargo.toml
kern/modules/paging/src/: common.rs  lib.rs
kern/modules/percpu/: Cargo.toml
kern/modules/percpu-macro/: Cargo.toml
kern/modules/percpu-macro/src/: lib.rs
kern/modules/percpu/src/: lib.rs
kern/modules/phys-frame/: Cargo.toml
kern/modules/phys-frame/src/: lib.rs
kern/modules/serial-id-macro/: Cargo.toml
kern/modules/serial-id-macro/src/: lib.rs
kern/modules/stack-alloc/: Cargo.toml
kern/modules/stack-alloc/src/: lib.rs
kern/modules/testdef/: Cargo.toml
kern/modules/testdef-macro/: Cargo.toml
kern/modules/testdef-macro/src/: lib.rs
kern/modules/testdef/src/: lib.rs
kern/modules/timed-event/: Cargo.toml
kern/modules/timed-event/src/: lib.rs
kern/modules/trap/: Cargo.toml
kern/modules/trap/src/: breakpoint.rs  lib.rs  soft_int.rs  timer_int.rs
kern/modules/trap/src/arch/: mod.rs
kern/modules/uprog/: Cargo.toml
kern/modules/uprog/src/: lib.rs
kern/modules/util/: Cargo.toml
kern/modules/util/src/: color.rs  fastpq.rs  interval.rs  lib.rs
kern/modules/vmm/: Cargo.toml
kern/modules/vmm/src/: lib.rs
kern/src/: bootargs.rs  main.rs  panic.rs
kern/src/arch/: mod.rs
kern/src/arch/riscv/: cpus.rs  mod.rs
kern/src/test/: heap.rs  mod.rs
kern/src/test/mm/: mod.rs
kern/src/test/task/: mod.rs  runtime.rs
kern/src/test/time/: mod.rs
kern/src/test/trap/: mod.rs
kern/tgt/: .gitignore  linker.ldS  riscv.board-list  riscv32.json  riscv64.json
scripts/python/: judge.py  test_expand.py  test_run.py  uart_test.py  util.py
tests/include/: kern.yml
tests/kern/task/: executor.yml
user/: Cargo.toml
user/programs/idle/: Cargo.toml
user/programs/idle/src/: main.rs
user/programs/test/nullptr-reader/: Cargo.toml
user/programs/test/nullptr-writer/: Cargo.toml
user/programs/test/system-caller/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: ar.rs  arch.rs  envs.rs  lint.rs  main.rs  make.rs  qemu.rs  uprog.rs
xtask/src/util/: arch.rs  cargo.rs  mod.rs  qemu.rs
(+17 files in other folders)
