[package]
name = "jrinx-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
fdt = "0.1.5"
jrinx-addr = { version = "0.1.0", path = "../addr" }
jrinx-config = { version = "0.1.0", path = "../config" }
jrinx-devprober = { version = "0.1.0", path = "../devprober" }
jrinx-error = { version = "0.1.0", path = "../error" }
jrinx-hal = { version = "0.1.0", path = "../hal" }
jrinx-heap = { version = "0.1.0", path = "../heap" }
jrinx-layout = { version = "0.1.0", path = "../layout" }
jrinx-util = { version = "0.1.0", path = "../util" }
bitflags = "1.3"
spin = "0.9.8"
