[package]
name = "jrinx-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3"
fdt = "0.1.5"
jrinx-addr = { version = "0.1.0", path = "../addr" }
jrinx-config = { version = "0.1.0", path = "../config" }
jrinx-devprober = { version = "0.1.0", path = "../devprober" }
jrinx-error = { version = "0.1.0", path = "../error" }
jrinx-hal = { version = "0.1.0", path = "../hal" }
jrinx-heap = { version = "0.1.0", path = "../heap" }
jrinx-layout = { version = "0.1.0", path = "../layout" }
jrinx-paging = { version = "0.1.0", path = "../paging" }
jrinx-phys-frame = { version = "0.1.0", path = "../phys-frame" }
jrinx-timed-event = { version = "0.1.0", path = "../timed-event" }
jrinx-util = { version = "0.1.0", path = "../util" }
jrinx-vmm = { version = "0.1.0", path = "../vmm" }
jrinx-multitask = {version = "0.1.0",path = "../multitask"}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = { version = "0.4.20", default-features = false }
spin = "0.9.8"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers.git", rev = "4b60f5d" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10.1"
[dependencies.smoltcp]
git = "https://github.com/rcore-os/smoltcp.git"
rev = "2ade274"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns",
  # "fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
  # "reassembly-buffer-size-65536", "reassembly-buffer-count-32",
  # "assembler-max-segment-count-32",
]
